# plover_cat

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyuic.json  setup.cfg
plover_cat/: TextEditor.py  __init__.py  main_window.py  plover_cat.ui  plover_cat_ui.py  project.py  resources_rc.py  steno_to_stroke.py  translate.py
plover_cat/resources/: resources.qrc
