[metadata]
name = plover_cat
version = 0.1.1
description = A CAT software for Plover
long_description = file: README.rst
author =  Luke Silva
author_email =  plovercat@lukesilva.com
license = GNU General Public License v3 (GPLv3)
url = https://github.com/LukeSilva/plover_cat
classifiers =
        Development Status :: 4 - Beta
        Environment :: Plugins
        Intended Audience :: End Users/Desktop
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
        plover>=4.0.0.dev8
packages =
        plover_cat

[options.entry_points]
plover.gui.qt.tool =
        plover_cat = plover_cat:PloverCAT

# vim: commentstring=#\ %s list
